# tfg_2025

./: README.md
dockerfiles/: dockerfile_humble  dockerfile_init
esp32_utils/controller/: esp32_01.cpp
esp32_utils/lib/Hub/: Hub.h
esp32_utils/src/: main.cpp
eurobot_ws/install/cam_pos_detection/include/cam_pos_detection/: aruco_detector.h  image_processor.h  pose_calculator.h
eurobot_ws/install/cam_pos_detection/lib/cam_pos_detection/: report_img
eurobot_ws/install/cam_pos_detection/share/cam_pos_detection/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
eurobot_ws/install/camera_sim/lib/camera_sim/: cam_info_node.py  sim_photo.py  sim_video.py
eurobot_ws/install/camera_sim/share/camera_sim/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
eurobot_ws/install/controller/lib/controller/: controller_node.py  differential_drive.py  first_driver.py
eurobot_ws/install/controller/share/controller/: package.sh
eurobot_ws/install/localization/share/localization/: local_setup.sh  package.sh  package.xml
eurobot_ws/log/: latest_build
eurobot_ws/src/cam_pos_detection/: CMakeLists.txt  package.xml
eurobot_ws/src/cam_pos_detection/src/: aruco_detector.cpp  camera_position_service.cpp  image_processor.cpp  pose_calculator.cpp  report_img.cpp  robot_position_node.cpp
eurobot_ws/src/cam_pos_detection/srv/: GetCameraPose.srv
eurobot_ws/src/camera_calibration/: CMakeLists.txt  package.xml
eurobot_ws/src/camera_sim/: CMakeLists.txt
eurobot_ws/src/camera_sim/config/: cam_calibration.yaml  camera_matrix_output.txt  distortion_coefficients_output.txt
eurobot_ws/src/controller/: CMakeLists.txt  odometry_01.csv  package.xml
eurobot_ws/src/controller/scripts/: controller_node.py  plot_traj.py
eurobot_ws/src/localization/: CMakeLists.txt
eurobot_ws/src/localization/scripts/: ekf_filter.py  localization_node.py
eurobot_ws/src/navigation/: CMakeLists.txt  package.xml
eurobot_ws/src/navigation/scripts/: simple_navigation_node.py
(+16 files in other folders)
